--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,10 @@
 /* Empty. Add your own CSS if you like */
 .title {
-    background-color:#bc0109;
+    text-align: center;
+    background-color:#d71921;
+}
+h1 {
+    margin: 0;
 }
  .pane {
         background: url(../img/backgroundimagered.jpg) no-repeat center center fixed; 
@@ -17,6 +21,27 @@
 .loginbutton {
     background-color: red;
 }
+.header {
+    background-color: #bc0109;
+    height: 80px;
+}
+
+.headerlogo {
+    background-color: white;
+    width: 30%;
+    height: 100%;
+    text-align: center;
+}
+
+.headerlogo img {
+    margin-top: 15px;
+    height: 50%;
+    width: 50%;
+}
+
+.logoquestion {
+    background-color: red;  
+}
 .personas {
     display: flex;
     flex-direction: column;
@@ -26,9 +51,8 @@
     background: url(../img/foodies.jpg) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
-        background-size: 100% 100%;
+       height: 50%;
         width: 50%;
-        height: 50%;
         overflow: hidden;
     
     }
@@ -69,7 +93,7 @@
     background: url(../img/fun.jpg) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
-        background-size: 100% 100%;
+        
         width: 50%;
         height: 50%;
         overflow: hidden;
