--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,7 +14,9 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <div class="title">
+        <h1>Left</h1>
+      </div>
     </ion-header-bar>
     <ion-content>
       <ion-list>
