--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,41 +1,96 @@
- <ion-view view-title="Home">
-    <ion-content ng-controller="AdventuresCtrl" class="personas">
-        <div class="foodies">
-            <div class="buttoncontainer">
-                <h1>Foodies</h1>
-                <a href="#/app/foodies">
-                    <button class="button button">Eat with Emirates</button>
-                </a>
-            </div>
-            <div class="bottombarcontainer">
-              <ul class="bottombar">
-                  <li class="followerscount"> Followers Count</li>
-                  <li class="followersavatar"> <img src="#">1</li>
-                  <li class="followersavatar"> <img src="#">2</li>
-                  <li class="followersavatar"><img src="#">3</li>
-                  <li class="followersavatar"> <img src="#">4</li>
-                  <li class="followersavatar"> <img src="#">5</li>
-              </ul>
-            </div>
-        </div>
 
-        <div class="fun">
-            <div class="buttoncontainer">
-                <h1>Foodies</h1>
-                <a href="#/app/fun">
-                    <button class="button button"> Eat with Emirates</button>
-                </a>
+        <ion-view view-title="Home">
+            <div class="header">
+                    <div class="headerlogo col-xs-3">
+                        <img src="./img/emirateslogo.png" class="headerlogo">
+                    </div>
+                </div>
+            
+        <ion-content ng-controller="AdventuresCtrl" class="personas">
+            <div class="row">
+                    <div class="foodies col-lg-6">
+                        <div class="buttoncontainer">
+                            <h1>Foodies</h1>
+                                <a href="#/app/foodie">
+                                    <button class="button btn-sm"> Eat with Emirates</button>
+                                </a>
+                            </div>
+                         <!--<div class="bottombarcontainer">
+                        <ul class="bottombar">
+                            <li class="followerscount"> Followers Count</li>
+                            <li class="followersavatar"> <img src="./img/follweravatar1.jpg"></li>
+                            <li class="followersavatar"> <img src="./img/follweravatar2.jpg"></li>
+                            <li class="followersavatar"><img src="./img/follweravatar3.jpg"></li>
+                            <li class="followersavatar"> <img src="./img/follweravatar4.jpg"></li>
+                            <li class="followersavatar"> <img src="./img/follweravatar5.jpg"></li>
+                        </ul>
+                     </div>-->
+                     
+                     </div>
+                
+            
+                <div class="fun col-lg-6">
+                    <div class="buttoncontainer">
+                      <h1>Fun</h1>
+                       <a href="#/app/fun">
+                        <button class="button btn-sm"> Eat with Emirates</button>
+                        </a>
+                     </div>
+                    <!--<div class="bottombarcontainer">
+                        <ul class="bottombar">
+                            <li class="followerscount"> Followers Count</li>
+                            <li class="followersavatar"> <img src="./img/follweravatar6.jpg"></li>
+                            <li class="followersavatar"> <img src="./img/follweravatar7.jpg"></li>
+                            <li class="followersavatar"><img src="./img/follweravatar8.jpg"></li>
+                            <li class="followersavatar"> <img src="./img/follweravatar9.jpg"></li>
+                            <li class="followersavatar"> <img src="./img/follweravatar10.jpg"></li>
+                        </ul>
+                     </div>-->
+                </div>
+                </div>
+            
+                <div class="row">
+             <div class="wellness col-lg-6">
+                <div class="buttoncontainer">
+                  <h1>Wellness</h1>
+                   <a href="#/app/wellness">
+                    <button class="button btn-sm">Stay with Emirates</button>
+                    </a>
+                 </div>
+                <!--<div class="bottombarcontainer">
+                    <ul class="bottombar">
+                        <li class="followerscount"> Followers Count</li>
+                        <li class="followersavatar"><img src="./img/follweravatar11.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar12.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar13.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar14.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar15.jpg"></li>
+                    </ul>
+                 </div>-->
             </div>
-            <div class="bottombarcontainer">
-              <ul class="bottombar">
-                  <li class="followerscount"> Followers Count</li>
-                  <li class="followersavatar"> <img src="#">1</li>
-                  <li class="followersavatar"> <img src="#">2</li>
-                  <li class="followersavatar"><img src="#">3</li>
-                  <li class="followersavatar"> <img src="#">4</li>
-                  <li class="followersavatar"> <img src="#">5</li>
-              </ul>
+                
+            
+            <div class="family col-lg-6">
+                <div class="buttoncontainer">
+                  <h1>Family</h1>
+                    
+                   <a href="#/app/family">
+                    <button class="button btn-sm">Kid Friendly</button>
+                    </a>
+                 </div>
+                <!--<div class="bottombarcontainer">
+                    <ul class="bottombar">
+                        <li class="followerscount"> Followers Count</li>
+                        <li class="followersavatar"><img src="./img/follweravatar16.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar17.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar18.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar19.jpg"></li>
+                        <li class="followersavatar"><img src="./img/follweravatar20.jpg"></li>
+                    </ul>
+                 </div>-->
             </div>
         </div>
+    </div>
     </ion-content>
 </ion-view>
+
