--- a/www/templates/fun.html
+++ b/www/templates/fun.html
@@ -1,5 +1,3 @@
- <ion-view view-title="Home">
+ <ion-view view-title="fun">
     <ion-content ng-controller="AdventuresCtrl" class="personas">
-      <h1>Hello</h1>
-    </ion-content>
-</ion-view>
+             <div class="black">Yo</div>
