--- a/www/templates/foodie.html
+++ b/www/templates/foodie.html
@@ -1,6 +1,6 @@
  <ion-view view-title="Foodie">
     <ion-content>
-      <div class="header">
+      <div class="header2">
                     <div class="headerlogo col-xs-3">
                         <a href="#/app/home">
                         <img src="./img/emirateslogo.png" class="headerlogo">
