--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,8 +10,8 @@
             <div class="row">
                     <div class="foodies col-lg-6">
                         <div class="buttoncontainer">
-                            <h1>Foodies</h1>
-                                <a href="#/app/foodie">
+                            <h1>Foodie</h1>
+                                <a href="#/app/continents">
                                     <button class="button btn-sm"> Eat with Emirates</button>
                                 </a>
                             </div>
