--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<ion-view title="Travel Track">
   <ion-content class="personas">
     <div class="foodie">
       <div class="persona-container">
@@ -15,7 +15,7 @@
     </div>
     <div class="fun">
       <div class="persona-container">
-        <h1><a href="/fun">Fun</a></h1>
+        <h1><a href="#/app/fun">Fun</a></h1>
       </div>
       <div class="bottom-bar">
         <div class="followers-count">51 Followers</div>
