--- a/www/css/style.css
+++ b/www/css/style.css
@@ -67,15 +67,80 @@
 
 .box.blue  {
     height: 600px;
-    background-color: #51BBFE;
+    background-color: #044389;
 }
 
-.box.yellow  {
+.exp-image-blue {
+    height: 35%;
+    background: url("../img/fun1.png");
+    background-size: contain;
+}
+
+.exp-container {
+    height: 65%;
+    background: -webkit-linear-gradient(
+        top,
+        hsla(240,24%,94%,0) -3%,
+        hsla(240,24%,94%, 1) 7%);
+    color: gray;
+}
+
+.exp-details {
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    /*margin-top: 20px;*/
+    /*background-color: black;*/
+}
+
+.detail-icons{
+    width: 10%;
+    display: inline-block;
+    text-align: center;
+    line-height: 230%;
+}
+
+.detail-icons i {
+    font-size: 50px;
+    padding: 0 12px 0 12px;
+    display: block;
+    margin-top: 25px;
+}
+
+.detail-desc {
+    width: 80%;
+    margin-top: 35px;
+    display: inline-block;
+    padding: 0 0 0 22px;
+    font-family: ‘Metrophobic’, Arial, serif;
+    font-size: 14px;
+}
+
+.detail-desc h1 {
+    color: gray;
+    line-height: 50%;
+    font-size: 22px;
+}
+
+.box.purple  {
     height: 600px;
-    background-color: #F7FE72;
+    background-color: #540D6E;
+}
+
+.exp-image-purple {
+    height: 35%;
+    background: url("../img/fun2.png");
+    background-size: contain;
 }
 
 .box.pink  {
     height: 600px;
-    background-color: #EE4266;
+    background-color: #89023E;
+}
+
+.exp-image-pink {
+    height: 35%;
+    background: url("../img/fun3.png");
+    background-size: contain;
 }
