--- a/www/templates/fun.html
+++ b/www/templates/fun.html
@@ -1,17 +1,107 @@
  <ion-view title="Fun">
     <ion-content>
-      <div>
-        <h1>Hello</h1>
-      </div>
       <ion-slide-box on-slide-changed="slideHasChanged($index)">
       <ion-slide>
-        <div class="box blue"><h1>BLUE</h1></div>
+        <div class="box blue">
+          <div class="exp-image-blue"></div>
+          <div class="exp-container">
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-information-circled"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-android-compass"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-android-globe"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </ion-slide>
       <ion-slide>
-        <div class="box yellow"><h1>YELLOW</h1></div>
+        <div class="box purple">
+          <div class="exp-image-purple"></div>
+          <div class="exp-container">
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-information-circled"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-android-compass"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-android-globe"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </ion-slide>
       <ion-slide>
-        <div class="box pink"><h1>PINK</h1></div>
+        <div class="box pink">
+          <div class="exp-image-pink"></div>
+          <div class="exp-container">
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-information-circled"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-android-compass"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+            <div class="exp-details">
+              <div class="detail-icons">
+                <i class="ionic ion-android-globe"></i>
+              </div>
+              <div class="detail-desc">
+                <h1>Organic etsy narwhal</h1>
+                <p>Dreamcatcher mumblecore yuccie intelligentsia occupy viral hammock direct trade taxidermy.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </ion-slide>
       </ion-slide-box>
     </ion-content>
